# mcp-server-12306

./: .env.example  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  pyproject.toml
docs/: get_current_time.md  get_station_info.md  get_train_route_stations.md  query_ticket_price.md  query_tickets.md  query_transfer.md  search_stations.md
scripts/: update_stations.py
src/mcp_12306/: __init__.py  cli.py  server.py  stdio_server.py
src/mcp_12306/resources/: station_name.js
src/mcp_12306/services/: __init__.py  station_service.py
src/mcp_12306/utils/: __init__.py  config.py  date_utils.py
